# Aruns-Treasury-Branches

./: .containerignore  .gitignore  Cargo.toml  atb-web.Containerfile  atb.code-workspace  fly.toml  package-lock.json  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build-plugin.yml  build-push-container.yml
api-clients/atb-client/: Cargo.toml  calculator.wai  wasmer.toml
api-clients/atb-client-js/: main.js  package-lock.json  package.json
api-clients/atb-client-python/: requirements.txt
api-clients/atb-client-python/src/: main.py
api-clients/atb-client/src/: lib.rs
api_doc/: README.org  atb.postman_collection.json  hoppscotch.json
apiclients/python/: main.py  pyproject.toml
atb-backend/: .gitignore  dbinit.sql  docker-compose.yml  go.mod  go.sum  gqlgen.yml  index.ts  init.sql  main.go  package-lock.json  package.json  server.go
atb-backend/graph/: resolver.go  schema.graphqls  schema.resolvers.go
atb-backend/prisma/: schema.prisma
atb-frontend/: README.md  package-lock.json  package.json  vite.config.ts
atb-frontend/components/: Header.tsx  MantineLogo.tsx  layout.tsx
atb-frontend/pages/: 404.tsx  _app.tsx  _document.tsx  account.tsx  home.tsx  index.tsx  invest.tsx  login.tsx  trade.tsx  transfers.tsx
atb-frontend/pages/account/: index.tsx
atb-frontend/pages/api/balance/: [account_name].ts
atb-frontend/pages/faq/: index.tsx
atb-frontend/prisma/: schema.prisma
atb-frontend/util/: auth.ts
atb-frontend/utils/: db.ts
atb-web/: Cargo.toml  Dockerfile  build.rs  echo  generate-keys.sh  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.js
atb-web/.cargo/: config.toml
atb-web/.sqlx/: query-32facf3bf257dfe2a701826f480e26a72f380e7c7e446d7b6b5f9e0a3c8fdb70.json  query-6f70a4c00adc624a1cde0d4c800ccc90a9952e997377280a838d39a6e972c4d1.json  query-80f94768f5cb31af977aebdfc6661f5fa5503a1dc422275b3d52180a9012c5cc.json
atb-web/migrations/: 20230906004403_initial-tables.sql  20240228021108_test-data.sql
atb-web/queries/: get_accounts_for_user.sql  new_user.sql  update_account_name.sql  withdraw.sql
atb-web/src/: app.rs  error_template.rs  lib.rs  main.rs
atb-web/src/apiroutes/: mod.rs
atb-web/src/components/: avatar.rs  azureloginbutton.rs  loginbutton.rs  mod.rs  navbar.rs  signupbutton.rs  status.rs  transactions.rs
atb-web/src/pages/: auth_callback.rs  login.rs  mod.rs  signup.rs  status.rs  transactions.rs
atb-web/src/serverfns/: link_account.rs  login.rs  mod.rs  server_status.rs  ticker.rs  transactions.rs
atb-web/style/: main.scss  tailwind.css
atb_backend/: Cargo.toml  Dockerfile  docker-compose.yml
atb_backend/atb_api/: Cargo.toml  apiclient.wai
atb_backend/atb_api/src/: lib.rs
atb_backend/atb_backend/: .env  Cargo.toml
atb_backend/atb_backend/.cargo/: config.toml
atb_backend/atb_backend/src/: auth_server.rs  authentication.rs  main.rs  server_for_plugin.rs
atb_backend/atb_backend/src/db/: mod.rs  users.rs
atb_backend/atb_backend/src/db/queries/: delete_account.sql  deposit.sql  get_balances_for_account.sql  get_transactions_for_account.sql  new_account.sql
atb_backend/atb_backend/src/db/queries/migrations/: 1-setup.sql  2-testdata.sql
atb_backend/atb_order_book/: Cargo.toml
atb_backend/atb_order_book/src/: lib.rs  main.rs
atb_backend/atb_order_queue/: Cargo.toml  README.mdx
atb_backend/atb_order_queue/src/: lib.rs
atb_backend/atb_types/: Cargo.toml
atb_backend/atb_types/src/: itemids.rs  lib.rs
atb_backend/db/: setup.sql
atb_backend/src/: main.rs
atb_frontend/: README.md  pubspec.yaml
atb_frontend/android/app/: build.gradle
atb_frontend/ios/Runner/: Info.plist
atb_frontend/ios/Runner.xcodeproj/: project.pbxproj
atb_frontend/lib/: main.dart
atb_frontend/linux/: CMakeLists.txt  my_application.cc
atb_frontend/macos/Runner.xcodeproj/: project.pbxproj
atb_frontend/macos/Runner/Configs/: AppInfo.xcconfig
atb_frontend/test/: widget_test.dart
atb_frontend/web/: index.html  manifest.json
atb_frontend/windows/: CMakeLists.txt
atb_frontend/windows/runner/: Runner.rc  main.cpp
atb_types/: Cargo.toml
atb_types/src/: lib.rs
atb_web/: Cargo.toml  README.md  package-lock.json  package.json
atb_web/app/: layout.tsx  page.tsx
atb_web/app/api/auth/[...nextauth]/: route.ts
atb_web/app/api/mcuuid/: route.ts
atb_web/app/login/: loading.tsx  page.tsx
atb_web/components/: Btns.tsx  ProtectedPage.tsx
atb_web/hooks/: useAuth.ts
atb_web/lib/: auth.ts  mcauthProvider.ts
atb_web/pages/: deposits.tsx  login.tsx
atb_web/src/: App.tsx  error-page.tsx  index.tsx  main.rs  main.tsx  root.tsx
atb_web/src/components/: Header.tsx  ProtectedPage.tsx  header.rs  loading.tsx  protectedpage.tsx  root.tsx
atb_web/src/components/header/: header.tsx
atb_web/src/hooks/: apiclient.ts  useAuth.ts
atb_web/src/pages/: home.tsx  login.rs  login.tsx  mod.rs  notfound.rs  notfound.tsx  summary.tsx
atb_web/src/routes/: Home.tsx  deposit.tsx  layout.tsx  login.tsx  overview.tsx  root.tsx
atb_web/src/routes/doc/: index.mdx
atb_web/src/routes/login/: index.tsx
atb_web/src/util/: auth.ts
chat-scraper/: Cargo.toml
chat-scraper/src/: main.rs
db/: docker-compose.yml
mc-plugin/: .gitignore  Makefile  build.gradle  build.gradle.kts  get_server_jar.sh  gradle.properties  manual_test.sh  pom.xml  settings.gradle  settings.gradle.kts
mc-plugin/.run/: atb [clean,package].run.xml  build and run server.run.xml  run server.run.xml
mc-plugin/app/: build.gradle.kts
mc-plugin/buildSrc/: build.gradle.kts
mc-plugin/gradle/: libs.versions.toml
mc-plugin/src/main/resources/: config.yml  plugin.yml
migrations/: 1-setup.sql
plugin/: build.gradle.kts  settings.gradle.kts
plugin/src/main/kotlin/: ArunsTreasuryBranches.kt
prisma/: schema.prisma
rust-backend/: .gitignore  Cargo.toml  wrangler.toml
rust-backend/src/: db.rs  lib.rs
server-status/: package-lock.json  package.json
server-status/api/: Pipfile  info.py  init.py  requirements.txt
server-status/src/routes/: index.svelte
test-rust-mc-login/: Cargo.toml
test-rust-mc-login/src/: main.rs
(+44 files in other folders)
