[workspace]
resolver = "2"

members = [
    "atb_backend/atb_backend",
    "atb_backend/atb_order_book",
    "atb_backend/atb_order_queue",
    "atb_backend/atb_types",
    "atb-web",
    "test-rust-mc-login",
]


[profile.dev.package.sqlx-macros]
opt-level = 3

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[profile.release]
panic = "abort"
