[package]
name = "atb_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls" , "postgres", "macros", "time", "uuid"], optional = true }
uuid = { version = "*", features = ["serde"] }
chrono = "*"
serde = { version = "*", features = ["derive"] }
async-trait = "*"
axum_session = { version = "*", features = [ "postgres-rustls"] , optional = true }
axum_session_auth = { version = "*", features = [ "postgres-rustls" ], optional = true }
anyhow = "1.0.80"

[features]
ssr = [
  "dep:sqlx",
  "dep:axum_session",
  "dep:axum_session_auth",
]
