[package]
name = "atb_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "*"
yew-router = "*"
gloo = "*"
gloo-storage = "*"
gloo-net = "*"
wasm-bindgen-futures = "*"
uuid = { version = "*", features =  [ "v4", "js" ] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
