[package]
name = "chat-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linemux = "0.2"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
regex = "1"
lazy_static = "1"
rcon = { version = "0", features = ["rt-tokio"] }
