[package]
name = "test-rust-mc-login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = "0.1.2"
nutype = { version = "0.3.1", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
oauth2 = { version = "4.4.2", default-features = false, features = ["reqwest", "rustls-tls"] }
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1.32.0", features = ["full"] }
minecraft-msa-auth = "0.3.0"
