[package]
name = "test-rust-mc-login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = "0.1.2"
nutype = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.63"
oauth2 = { version = "4.4.2", default-features = false, features = ["reqwest", "rustls-tls"] }
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1.39.1", features = ["full"] }
minecraft-msa-auth = "0.4.0"
