[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Arunscape <8227297+Arunscape@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
wasmer = "^1.1.0"
wasmer-compiler-cranelift = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
