[package]
name = "atb_api"
version = "0.1.0"
edition = "2021"
description = "github.com/Arunscape/aruns-treasury-branches"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wapm]
namespace = "arunscape"  # Replace this with your WAPM username
abi = "none"
# bindings = { wai-bindgen = "0.1.0", exports = "apiclient.wai" }


[dependencies]
wai-bindgen-rust = "0.2"
reqwest = { version = "0.11", features = ["json"] }
async-trait = { version = "0.1" }
