[package]
name = "atb_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#redis = { version = "*", features = ["async-std-tls-comp", "cluster", "json"] }
#redis = { git = "https://github.com/redis-rs/redis-rs.git", features = ["async-std-tls-comp", "cluster", "json"] }
tide = "*"
tide-acme = "*"
tide-rustls = "*"
async-std = { version = "*", features = ["attributes"] }
serde = { version = "*", features = ["derive"] }
futures = "*"
#async-graphql = { version = "*", features = ["bson", "chrono"] }
dotenvy = "*"
lazy_static = "*"
#once_cell = "*"
regex = "*"
jsonwebtoken = "*"
base64 = "*"
dotenv_codegen = "*"
#async-graphql-tide = { version = "*", features = ["tide-websockets"] }
#juniper = "*"
chrono = "*"
cookie = "*"
sqlx = { version = "0.6.2", features = [ "runtime-async-std-rustls", "postgres", "macros", "chrono", "uuid"] }
tide-sqlx = { git = "https://github.com/Arunscape/tide-sqlx.git", features = ["postgres"] }
atb_types = { version = "*", path = "../atb_types" }
uuid = { version = "*", features = ["serde", "v4"] }
http-types = "*"



