[package]
name = "atb_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atb_types = { version = "*", path = "../atb_types" }
axum = { version = "0.6", features = ["http2", "macros"] }
chrono = "0.4.24"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
serde = "1.0.162"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"] }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "full", "tracing"] }
uuid = { version = "1.3.2", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
