[package]
name = "atb_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atb_types = { version = "*", path = "../atb_types" }
axum = { version = "0.6", features = ["http2", "macros"] }
chrono = "0.4.26"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
serde = "1.0.164"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"] }
tokio = { version = "1.29.0", features = ["macros", "rt-multi-thread", "full", "tracing"] }
uuid = { version = "1.4.0", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
load-dotenv = "0.1.2"
reqwest = { version = "0.11", features = ["json"] }