[package]
name = "atb_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#sqlx = { version = "0.6", features = [ "runtime-async-std-native-tls", "postgres", "macros", "chrono"] }
uuid = { version = "*", features = ["serde"] }
chrono = "*"
serde = { version = "*", features = ["derive"] }
